cassandra/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cassandra
  labels:
    app: cassandra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cassandra
  strategy: {}
  template:
    metadata:
      labels:
        app: cassandra
    spec:
      containers:
        - env:
            - name: CASSANDRA_CONTACT_POINTS
              value: db:9042
            - name: CASSANDRA_KEYSPACE_CQL
              value: CREATE KEYSPACE mykeyspace WITH REPLICATION = {'class':'SimpleStrategy','replication_factor':1};
            - name: CASSANDRA_LOCAL_DC
              value: datacenter1
            - name: CASSANDRA_PASSWORD
              value: cassandra
            - name: CASSANDRA_USER
              value: cassandra
            - name: CASSANDRA_USE_ASTRA
              value: "false"
            - name: DISTRIBUTED_TRACING_ENABLED
              value: "false"
            - name: MONITORING_GRAFANA
              value: "false"
            - name: MONITORING_PROMETHEUS
              value: "false"
          image: cassandra
          name: cassandra
          ports:
            - containerPort: 9042
