cassandra/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cassandra-service
  labels:
    app: cassandra
spec:
  type: ClusterIP
  ports:
    - name: "9042"
      port: 9042
      protocol: TCP
      targetPort: 9042
  selector:
    app: cassandra
