cassandra/db-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cassandra-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: db.helo-k8s.fun
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: cassandra
            port:
              number: 9042
